objects/Backlog_Item__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Backlog Items</relationshipLabel>
        <relationshipName>Backlog_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Urgency__c</fullName>
        <label>Business Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clarification_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clarification Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployed_To_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed To Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployed_to_UAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed to UAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marked_Completed_By__c</fullName>
        <label>Marked Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Deprecated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Backlog Items</relationshipLabel>
        <relationshipName>Backlog_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reported On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testing_Completed_By__c</fullName>
        <label>Testing Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing_Status__c</fullName>
        <label>Testing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Backlog Item</label>
    <nameField>
        <displayFormat>#{000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>